--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -139,4 +139,5 @@ $menu-label-color: $white-ter;
     margin: 0 1.5em 0 0;
 }
 
-@import "~bulma"; // responsiveness
+@import "~bulma";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
