--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -139,6 +139,7 @@ $menu-label-color: $white-ter;
     margin: 0 1.5em 0 0;
 }
 
-@import "utils.scss";
 @import "~bulma";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import "utils.scss";
+@import "components/common/spinner.scss";
